--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -1,4 +1,3 @@
-
 body {
     min-width: 600px;
     width: 600px;
@@ -7,16 +6,15 @@ body {
     font-family: Verdana, sans;
 }
 
-body,div,span,td,p,h2,h3,h4,h5,h6,a,ul,li {
+body, div, span, td, p, h2, h3, h4, h5, h6, a, ul, li {
     font-family: Verdana, sans;
     font-size: 11px;
     color: #5A5A5A;
     font-style: normal;
 }
 
-a,a:hover,a:visited,a:active {
-    color: #5A5A5A;
-    /* text-decoration: underline; */
+a, a:hover, a:visited, a:active {
+    color: #5A5A5A; /* text-decoration: underline; */
 }
 
 /* main layout */
@@ -31,7 +29,7 @@ a,a:hover,a:visited,a:active {
     height: 100px;
 }
 
-#bannerLeft img{
+#bannerLeft img {
     margin: 10px 0 0 10px;
 }
 
@@ -90,10 +88,9 @@ a,a:hover,a:visited,a:active {
     workaround for bug in the Doxia docbook renderer that opens
     anchors (e.g. <a name="index">), but doesn't ever close them
 */
-#section a,a:hover,a:visited,a:active {
+#section a, a:hover, a:visited, a:active {
     text-decoration: none;
 }
-
 
 #breadcrumbs a {
     color: #fff;
@@ -159,8 +156,7 @@ h3 {
     list-style-position: outside;
     font-size: 7.5pt !important;
     padding-left: 16px;
-    padding-left /**/: 2px !important;
-    /* warning, don't reformat, there should be no comment between padding-left and comment, to fix IE5 issues */
+    padding-left /**/: 2px !important; /* warning, don't reformat, there should be no comment between padding-left and comment, to fix IE5 issues */
 }
 
 #menuDownloadable_docs li {
@@ -208,7 +204,7 @@ h3 {
     padding-bottom: 2px;
 }
 
-#breadcrumbs div.xright,#breadcrumbs div.xleft {
+#breadcrumbs div.xright, #breadcrumbs div.xleft {
     color: #fff;
     display: inline;
     font-size: 7pt !important;
@@ -234,7 +230,7 @@ div.source {
     background-color: #ddd;
 }
 
-div.source pre,code,td.code {
+div.source pre, code, td.code {
     font-size: 8pt !important;
     font-family: monospace;
     margin: 0;
@@ -253,7 +249,7 @@ table td.source {
     border: none !important;
 }
 
-table td,table th {
+table td, table th {
     font-size: 8pt !important;
     font-family: verdana;
 }
@@ -276,16 +272,18 @@ li.expanded ul {
 }
 */
 
-a.externalLink,a.newWindow {
+a.externalLink, a.newWindow {
     padding-right: 9px !important;
     background-image: none !important; /*ie5*/
 }
 
-a.externalLink /* */ {
+a.externalLink /* */
+{
     background-image: url(../images/external.png) !important;
 }
 
-a.newWindow /* */ {
+a.newWindow /* */
+{
     background-image: url(../images/newwindow.png) !important;
 }
 
@@ -300,7 +298,9 @@ i {
 table {
     width: 100%;
 }
-/* remove banner: comment the following lines for the full layout */ /*
+
+/* remove banner: comment the following lines for the full layout */
+/*
 #banner, #breadcrumbs {
     display: none !important;
 }
